--- a/index.html
+++ b/index.html
@@ -31,6 +31,27 @@
       </style>
 </head>
 <body>
-    
+    <!-- Navbar start -->
+    <nav>
+
+    </nav>
+    <!-- Navabr end -->
+    <header>
+        <!-- Banner section start -->
+        <section>
+
+        </section>
+        <!-- Banner section end -->
+
+    </header>
+    <main>
+
+
+    </main>
+    <!-- footer start -->
+    <footer>
+
+    </footer>
+    <!-- footer end -->
 </body>
 </html>
