--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/27ff442055.js" crossorigin="anonymous"></script>
     <title>Fruit Brust</title>
     <!-- Customization Tailwind Configuration -->
     <script>
@@ -32,13 +34,42 @@
 </head>
 <body>
     <!-- Navbar start -->
-    <nav>
+    <nav class="container mx-auto my-4">
+        <div class=" navbar bg-red-500 lg:p-5 p-1 rounded-full">
+                <div class=" hidden lg:flex flex-1 gap-10 list-none text-white text-lg font-medium">
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Shop</li>
+                    <li>All Fruits</li>
+               </div>
+            <div class="flex-1">
+              <img src="images/logo.png" alt=""><span class="lg:text-4xl ml-3 font-bold text-white">Fruit Burst</span>
+            </div>
+            <div class="flex-none gap-2">
+                <div class=" hidden lg:flex relative"> 
+                    <input class="rounded-3xl px-8 py-2 border-none bg-white placeholder:text-base placeholder:font-normal" type="text" placeholder="Search here">
+                    <div class="absolute top-2 right-4"><i class="fa-solid fa-magnifying-glass"></i></div>
+                </div>
+                <div class="dropdown lg:hidden">
+                    <label tabindex="0" class="btn btn-ghost btn-circle">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>   
+                    </label>
+                    <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 mr-4 z-[1] py-2 shadow bg-base-100 rounded-box ">
+                      <li>Home</li>
+                      <li>About Us</li>
+                      <li>Shop</li>
+                      <li>All Fruit</li>
+                    </ul>
+                  </div>
+            </div>
+          </div>
 
     </nav>
     <!-- Navabr end -->
-    <header>
+    <header class="container mx-auto">
         <!-- Banner section start -->
         <section>
+
 
         </section>
         <!-- Banner section end -->
@@ -49,7 +80,7 @@
 
     </main>
     <!-- footer start -->
-    <footer>
+    <footer class="container mx-auto">
 
     </footer>
     <!-- footer end -->
