banner and coutdown commit

--- a/index.html
+++ b/index.html
@@ -68,14 +68,128 @@
     <!-- Navabr end -->
     <header class="container mx-auto">
         <!-- Banner section start -->
-        <section>
+        <section class="my-10">
+            <!-- slider start -->
+            <div class="carousel w-full relative">
+                <!-- slide 1 -->
+                <div id="slide1" class="carousel-item relative w-full">
 
-
+                  <img src="images/banner1.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle  bg-black border-none text-white">❮</a> 
+                    <a href="#slide2" class="btn btn-circle  bg-black border-none text-white">❯</a>
+                  </div>
+                  <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white space-y-4 text-center">
+                    <h1 class="text-6xl font-bold">Exotic tastes at your<br> doorstep</h1>
+                    <p class="text-xl font-normal">We supply highly quality organic products</p>
+                    <button class="mt-4 px-4 py-2 bg-red-500 text-white font-bold rounded-md">Shop Now</button>
+                  </div>
+                </div> 
+                <!-- slide 2 -->
+                <div id="slide2" class="carousel-item relative w-full">
+                  <img src="images/banner2.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle  bg-black border-none text-white">❮</a> 
+                    <a href="#slide3" class="btn btn-circle  bg-black border-none text-white">❯</a>
+                  </div>
+                  <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white space-y-4 text-center">
+                    <h1 class="text-6xl font-bold">Exotic tastes at your<br> doorstep</h1>
+                    <p class="text-xl font-normal">We supply highly quality organic products</p>
+                    <button class="mt-4 px-4 py-2 bg-red-500 text-white font-bold rounded-md">Shop Now</button>
+                  </div>
+                </div> 
+                <!-- slide 3 -->
+                <div id="slide3" class="carousel-item relative w-full">
+                  <img src="images/banner3.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle bg-black border-none text-white">❮</a> 
+                    <a href="#slide4" class="btn btn-circle  bg-black border-none text-white">❯</a>
+                  </div>
+                  <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white space-y-4 text-center">
+                    <h1 class="text-6xl font-bold">Exotic tastes at your<br> doorstep</h1>
+                    <p class="text-xl font-normal">We supply highly quality organic products</p>
+                    <button class="mt-4 px-4 py-2 bg-red-500 text-white font-bold rounded-md">Shop Now</button>
+                  </div>
+                </div> 
+                <!-- slide 4 -->
+                <div id="slide4" class="carousel-item relative w-full">
+                  <img src="images/banner4.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle  bg-black border-none text-white">❮</a> 
+                    <a href="#slide1" class="btn btn-circle  bg-black border-none text-white">❯</a>
+                  </div>
+                  <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white space-y-4 text-center">
+                    <h1 class="text-6xl font-bold">Exotic tastes at your<br> doorstep</h1>
+                    <p class="text-xl font-normal">We supply highly quality organic products</p>
+                    <button class="mt-4 px-4 py-2 bg-red-500 text-white font-bold rounded-md">Shop Now</button>
+                  </div>
+                </div>
+              </div>
+               <!-- slider end-->
+            <!-- fruit name part start -->
+            <div class="absolute -bottom-[200px] left-0 right-0 flex justify-between bg-white rounded-lg py-2 max-w-6xl mx-auto px-10">
+                <p class="text-center"><img src="images/fruit1.png" alt=""><span>Blackberry</span></p>
+                <p class="text-center"><img src="images/fruit2.png" alt=""><span>Orange</span></p>
+                <p class="text-center"><img src="images/fruit3.png" alt=""><span>Mango</span></p>
+                <p class="text-center"><img src="images/fruit4.png" alt=""><span>Strawberry</span></p>
+                <p class="text-center"><img src="images/fruit5.png" alt=""><span>Pomegranate</span></p>
+            </div>
+            <!-- fruit name part end -->
         </section>
         <!-- Banner section end -->
-
     </header>
-    <main>
+    <main class="container mx-auto">
+        <!-- Deal with Day start -->
+        <section class="my-24">
+            <div class="flex justify-between items-center gap-10">
+                <div class="text-start space-y-4">
+                    <h1 class="text-5xl font-bold text-black">Deal of the day</h1>
+                    <p class="text-base font-normal text-gray-500">Contrary to popular belief, is not simply random text.
+                         It has roots in a piece of classical <br> Latin literature from 45 BC,
+                          making it over 2000 years old.</p>
+                </div>
+                <!-- coutdown start -->
+                <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+                    <div class="flex flex-col">
+                      <span class="countdown  text-5xl font-bold text-black space-x-3">
+                        <span style="--value:15;"></span> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M12 6.75C11.8011 6.75 11.6103 6.67098 11.4697 6.53033C11.329 6.38968 11.25 6.19891 11.25 6C11.25 5.80109 11.329 5.61032 11.4697 5.46967C11.6103 5.32902 11.8011 5.25 12 5.25C12.1989 5.25 12.3897 5.32902 12.5303 5.46967C12.671 5.61032 12.75 5.80109 12.75 6C12.75 6.19891 12.671 6.38968 12.5303 6.53033C12.3897 6.67098 12.1989 6.75 12 6.75ZM12 12.75C11.8011 12.75 11.6103 12.671 11.4697 12.5303C11.329 12.3897 11.25 12.1989 11.25 12C11.25 11.8011 11.329 11.6103 11.4697 11.4697C11.6103 11.329 11.8011 11.25 12 11.25C12.1989 11.25 12.3897 11.329 12.5303 11.4697C12.671 11.6103 12.75 11.8011 12.75 12C12.75 12.1989 12.671 12.3897 12.5303 12.5303C12.3897 12.671 12.1989 12.75 12 12.75ZM12 18.75C11.8011 18.75 11.6103 18.671 11.4697 18.5303C11.329 18.3897 11.25 18.1989 11.25 18C11.25 17.8011 11.329 17.6103 11.4697 17.4697C11.6103 17.329 11.8011 17.25 12 17.25C12.1989 17.25 12.3897 17.329 12.5303 17.4697C12.671 17.6103 12.75 17.8011 12.75 18C12.75 18.1989 12.671 18.3897 12.5303 18.5303C12.3897 18.671 12.1989 18.75 12 18.75Z" stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          </svg>
+                      </span>
+                      <p class="text-base font-normal text-gray-500 mr-6">Days</p>
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown text-5xl font-bold text-black space-x-3">
+                        <span style="--value:10;"></span> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M12 6.75C11.8011 6.75 11.6103 6.67098 11.4697 6.53033C11.329 6.38968 11.25 6.19891 11.25 6C11.25 5.80109 11.329 5.61032 11.4697 5.46967C11.6103 5.32902 11.8011 5.25 12 5.25C12.1989 5.25 12.3897 5.32902 12.5303 5.46967C12.671 5.61032 12.75 5.80109 12.75 6C12.75 6.19891 12.671 6.38968 12.5303 6.53033C12.3897 6.67098 12.1989 6.75 12 6.75ZM12 12.75C11.8011 12.75 11.6103 12.671 11.4697 12.5303C11.329 12.3897 11.25 12.1989 11.25 12C11.25 11.8011 11.329 11.6103 11.4697 11.4697C11.6103 11.329 11.8011 11.25 12 11.25C12.1989 11.25 12.3897 11.329 12.5303 11.4697C12.671 11.6103 12.75 11.8011 12.75 12C12.75 12.1989 12.671 12.3897 12.5303 12.5303C12.3897 12.671 12.1989 12.75 12 12.75ZM12 18.75C11.8011 18.75 11.6103 18.671 11.4697 18.5303C11.329 18.3897 11.25 18.1989 11.25 18C11.25 17.8011 11.329 17.6103 11.4697 17.4697C11.6103 17.329 11.8011 17.25 12 17.25C12.1989 17.25 12.3897 17.329 12.5303 17.4697C12.671 17.6103 12.75 17.8011 12.75 18C12.75 18.1989 12.671 18.3897 12.5303 18.5303C12.3897 18.671 12.1989 18.75 12 18.75Z" stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          </svg>
+                      </span>
+                      <p class="text-base font-normal text-gray-500 mr-6">Hours</p>
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown  text-5xl font-bold text-black space-x-3">
+                        <span style="--value:24;"> </span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M12 6.75C11.8011 6.75 11.6103 6.67098 11.4697 6.53033C11.329 6.38968 11.25 6.19891 11.25 6C11.25 5.80109 11.329 5.61032 11.4697 5.46967C11.6103 5.32902 11.8011 5.25 12 5.25C12.1989 5.25 12.3897 5.32902 12.5303 5.46967C12.671 5.61032 12.75 5.80109 12.75 6C12.75 6.19891 12.671 6.38968 12.5303 6.53033C12.3897 6.67098 12.1989 6.75 12 6.75ZM12 12.75C11.8011 12.75 11.6103 12.671 11.4697 12.5303C11.329 12.3897 11.25 12.1989 11.25 12C11.25 11.8011 11.329 11.6103 11.4697 11.4697C11.6103 11.329 11.8011 11.25 12 11.25C12.1989 11.25 12.3897 11.329 12.5303 11.4697C12.671 11.6103 12.75 11.8011 12.75 12C12.75 12.1989 12.671 12.3897 12.5303 12.5303C12.3897 12.671 12.1989 12.75 12 12.75ZM12 18.75C11.8011 18.75 11.6103 18.671 11.4697 18.5303C11.329 18.3897 11.25 18.1989 11.25 18C11.25 17.8011 11.329 17.6103 11.4697 17.4697C11.6103 17.329 11.8011 17.25 12 17.25C12.1989 17.25 12.3897 17.329 12.5303 17.4697C12.671 17.6103 12.75 17.8011 12.75 18C12.75 18.1989 12.671 18.3897 12.5303 18.5303C12.3897 18.671 12.1989 18.75 12 18.75Z" stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          </svg>
+                      </span>
+                      <p class="text-base font-normal text-gray-500 mr-6">Minutes</p>
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown  text-5xl font-bold text-black space-x-3">
+                        <span style="--value:3;"></span>
+                      </span>
+                      <p class="text-base font-normal text-gray-500 mr-6">Seconds</p>
+                    </div>
+                  </div>
+            </div>
+            <!-- countdown end -->
+            <!-- card start -->
+            <div class="">
+
+            </div>
+            <!-- card end -->
+        </section>
+        <!-- deal with day end -->
 
 
     </main>
