--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                       <img src="images/fruit6.png" alt="" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                      <h2 class="card-title">12.90$ - 18.85$</h2>
-                      <p>Apples</p>
+                      <h2 class="card-title font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                      <p class="text-base font-normal text-gray-500">Apples</p>
                       <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
                         <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
                         <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
@@ -202,17 +202,47 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="">Details</a></div>
+                       <div class="text-red-500 font-bold"><a href="#modal" >Details</a></div>
                     </div>
                   </div>
+                  <!-- Modal part start 1-->
+                  <div class="modal" id="modal">
+                    <div class="modal-content">
+                      <!-- Modal card here -->
+                      <div class="card w-full bg-white shadow-xl border rounded-md">
+                        <figure class="px-10 pt-10">
+                          <img src="images/fruit6.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title font-bold text-2xl text-black">Apples</h2>
+                          <p class="text-base font-normal text-gray-500">Professional employees are there for you to
+                             pick the most <br>amazing and fresh fruits.</p>
+                          <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
+                            <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
+                            <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
+                            <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
+                            <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
+                            <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
+                            <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
+                          </svg>
+                          <div class="space-x-4">
+                            <div class="btn text-red-500 bg-white border-red-500 font-bold capitalize"><a href="#" >Close</a></div>
+                            <div class="btn bg-red-500 text-white font-bold capitalize"><a href="#" >Buy Now</a></div>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end content -->
+                    </div>
+                  </div>
+                   <!-- Modal part end 1-->
                   <!-- 2 -->
                 <div class="card w-full bg-white shadow-xl border rounded-md">
                     <figure class="px-10 pt-10">
-                      <img src="images/fruit6.png" alt="" class="rounded-xl" />
+                      <img src="images/fruit7.png" alt="" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                      <h2 class="card-title">12.90$ - 18.85$</h2>
-                      <p>Apples</p>
+                      <h2 class="card-title font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                      <p class="text-base font-normal text-gray-500">Orange</p>
                       <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
                         <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
                         <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
@@ -221,17 +251,47 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="">Details</a></div>
+                       <div class="text-red-500 font-bold"><a href="#modal">Details</a></div>
                     </div>
                   </div>
+                  <!-- Modal part start 2-->
+                  <div class="modal" id="modal">
+                    <div class="modal-content">
+                      <!-- Modal card here -->
+                      <div class="card w-full bg-white shadow-xl border rounded-md">
+                        <figure class="px-10 pt-10">
+                          <img src="images/fruit7.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title font-bold text-2xl text-black">Orange</h2>
+                          <p class="text-base font-normal text-gray-500">Professional employees are there for you to
+                             pick the most <br>amazing and fresh fruits.</p>
+                          <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
+                            <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
+                            <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
+                            <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
+                            <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
+                            <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
+                            <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
+                          </svg>
+                          <div class="space-x-4">
+                            <div class="btn text-red-500 bg-white border-red-500 font-bold capitalize"><a href="#" >Close</a></div>
+                            <div class="btn bg-red-500 text-white font-bold capitalize"><a href="#" >Buy Now</a></div>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end content -->
+                    </div>
+                  </div>
+                   <!-- Modal part end 2-->
                   <!-- 3 -->
                 <div class="card w-full bg-white shadow-xl border rounded-md">
                     <figure class="px-10 pt-10">
-                      <img src="images/fruit6.png" alt="" class="rounded-xl" />
+                      <img src="images/fruit8.png" alt="" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                      <h2 class="card-title">12.90$ - 18.85$</h2>
-                      <p>Apples</p>
+                      <h2 class="card-title font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                      <p class="text-base font-normal text-gray-500">Red Dragon</p>
                       <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
                         <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
                         <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
@@ -240,17 +300,47 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="">Details</a></div>
+                       <div class="text-red-500 font-bold"><a href="#modal">Details</a></div>
                     </div>
                   </div>
+                  <!-- Modal part start 3-->
+                  <div class="modal" id="modal">
+                    <div class="modal-content">
+                      <!-- Modal card here -->
+                      <div class="card w-full bg-white shadow-xl border rounded-md">
+                        <figure class="px-10 pt-10">
+                          <img src="images/fruit8.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title font-bold text-2xl text-black">Red Dragon</h2>
+                          <p class="text-base font-normal text-gray-500">Professional employees are there for you to
+                             pick the most <br>amazing and fresh fruits.</p>
+                          <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
+                            <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
+                            <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
+                            <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
+                            <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
+                            <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
+                            <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
+                          </svg>
+                          <div class="space-x-4">
+                            <div class="btn text-red-500 bg-white border-red-500 font-bold capitalize"><a href="#" >Close</a></div>
+                            <div class="btn bg-red-500 text-white font-bold capitalize"><a href="#" >Buy Now</a></div>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end content -->
+                    </div>
+                  </div>
+                   <!-- Modal part end 3-->
                   <!-- 4 -->
                 <div class="card w-full bg-white shadow-xl border rounded-md">
                     <figure class="px-10 pt-10">
-                      <img src="images/fruit6.png" alt="" class="rounded-xl" />
+                      <img src="images/fruit9.png" alt="" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                      <h2 class="card-title">12.90$ - 18.85$</h2>
-                      <p>Apples</p>
+                      <h2 class="card-title font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                      <p class="text-base font-normal text-gray-500">Banana</p>
                       <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
                         <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
                         <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
@@ -259,18 +349,48 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="">Details</a></div>
+                       <div class="text-red-500 font-bold"><a href="#modal">Details</a></div>
                     </div>
                   </div>
+                    <!-- Modal part start 4-->
+                    <div class="modal" id="modal">
+                        <div class="modal-content">
+                          <!-- Modal card here -->
+                          <div class="card w-full bg-white shadow-xl border rounded-md">
+                            <figure class="px-10 pt-10">
+                              <img src="images/fruit9.png" alt="" class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                              <h2 class="card-title font-bold text-2xl text-black">Banana</h2>
+                              <p class="text-base font-normal text-gray-500">Professional employees are there for you to
+                                 pick the most <br>amazing and fresh fruits.</p>
+                              <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
+                                <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
+                                <path d="M45.9038 0L50.4527 7.00591L58.5214 9.16716L53.264 15.6584L53.7018 24L45.9038 21.0059V0Z" fill="#FBC0A8"/>
+                                <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
+                                <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
+                                <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
+                                <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
+                              </svg>
+                              <div class="space-x-4">
+                                <div class="btn text-red-500 bg-white border-red-500 font-bold capitalize"><a href="#" >Close</a></div>
+                                <div class="btn bg-red-500 text-white font-bold capitalize"><a href="#" >Buy Now</a></div>
+                              </div>
+                            </div>
+                          </div>
+                          <!-- end content -->
+                        </div>
+                      </div>
+                       <!-- Modal part end 4-->
             </div>
             <!-- card end -->
             <!-- button -->
             <div class="flex justify-center items-center">
                 <button class="inline-flex mt-4 px-4 py-2 bg-red-500 text-white font-bold rounded-md">Shop All</button>
             </div>
-            
         </section>
         <!-- deal with day end -->
+
 
 
     </main>
