--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         tailwind.config = {
           theme: {
             extend: {
+                backgroundImage: {
+                'img': "url('images/team.png')",
+            },
               colors: {
                 clifford: '#da373d',
                 'fixed-star': '#FBC0A8',
@@ -202,11 +205,11 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="#modal" >Details</a></div>
+                       <div class="text-red-500 font-bold"><a href="#modal1" >Details</a></div>
                     </div>
                   </div>
                   <!-- Modal part start 1-->
-                  <div class="modal" id="modal">
+                  <div class="modal" id="modal1">
                     <div class="modal-content">
                       <!-- Modal card here -->
                       <div class="card w-full bg-white shadow-xl border rounded-md">
@@ -251,11 +254,11 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="#modal">Details</a></div>
+                       <div class="text-red-500 font-bold"><a href="#modal2">Details</a></div>
                     </div>
                   </div>
                   <!-- Modal part start 2-->
-                  <div class="modal" id="modal">
+                  <div class="modal" id="modal2">
                     <div class="modal-content">
                       <!-- Modal card here -->
                       <div class="card w-full bg-white shadow-xl border rounded-md">
@@ -300,11 +303,11 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="#modal">Details</a></div>
+                       <div class="text-red-500 font-bold"><a href="#modal3">Details</a></div>
                     </div>
                   </div>
                   <!-- Modal part start 3-->
-                  <div class="modal" id="modal">
+                  <div class="modal" id="modal3">
                     <div class="modal-content">
                       <!-- Modal card here -->
                       <div class="card w-full bg-white shadow-xl border rounded-md">
@@ -349,11 +352,11 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="#modal">Details</a></div>
+                       <div class="text-red-500 font-bold"><a href="#modal4">Details</a></div>
                     </div>
                   </div>
                     <!-- Modal part start 4-->
-                    <div class="modal" id="modal">
+                    <div class="modal" id="modal4">
                         <div class="modal-content">
                           <!-- Modal card here -->
                           <div class="card w-full bg-white shadow-xl border rounded-md">
@@ -390,6 +393,68 @@
             </div>
         </section>
         <!-- deal with day end -->
+        <!-- Meet with team start -->
+        <section class="my-24 bg-img bg-no-repeat h-[690px] rounded-md border-none">
+            <div class="text-center pt-32 space-y-4">
+                <h1 class="text-5xl font-bold text-white">Meet the team section</h1>
+                <p class="text-white font-normal">Contrary to popular belief, is not simply random text.
+                     It has roots in a piece of classical <br> Latin literature from 45 BC,
+                      making it over 2000 years old.</p>
+            </div>
+            <!-- team member start -->
+            <div class="flex justify-center pt-12 space-x-16">
+                <div class="text-center">
+                    <div class="mb-5"><img src="images/member1.png" alt=""></div>
+                   <div class="space-y-1">
+                        <h4 class="text-xl font-bold text-white">Awlad Hossain</h4>
+                        <p class="text-white">Fruits Expert</p>
+                        <div class="space-x-1">
+                            <i class="fa-brands fa-facebook text-red-500 "></i>
+                            <i class="fa-brands fa-twitter text-red-500 rounded-full"></i>
+                            <i class="fa-brands fa-linkedin text-red-500"></i>
+                        </div>
+                   </div>
+                </div>
+                <div class="text-center">
+                    <div class="mb-5"><img src="images/member2.png" alt=""></div>
+                    <div class="space-y">
+                        <h4  class="text-xl font-bold text-white">Safia Chowdhury</h4>
+                        <p class="text-white">Fruits Expert</p>
+                        <div class="space-x-1">
+                            <i class="fa-brands fa-facebook text-red-500 "></i>
+                            <i class="fa-brands fa-twitter text-red-500 rounded-full"></i>
+                            <i class="fa-brands fa-linkedin text-red-500"></i>
+                        </div>
+                </div>
+                    </div>
+                <div class="text-center">
+                    <div class="mb-5"><img src="images/member3.png" alt=""></div>
+                    <div class="space-y-1">
+                        <h4 class="text-xl font-bold text-white">Rokib Hossain</h4>
+                        <p class="text-white">Fruits Expert</p>
+                        <div class="space-x-1">
+                            <i class="fa-brands fa-facebook text-red-500 "></i>
+                            <i class="fa-brands fa-twitter text-red-500 rounded-full"></i>
+                            <i class="fa-brands fa-linkedin text-red-500"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center">
+                   <div class="mb-5"><img src="images/member4.png" alt=""></div>
+                   <div class="space-y-1">
+                        <h4 class="text-xl font-bold text-white">Chaity</h4>
+                        <p class="text-white">Fruits Expert</p>
+                        <div class="space-x-1">
+                            <i class="fa-brands fa-facebook text-red-500 "></i>
+                            <i class="fa-brands fa-twitter text-red-500 rounded-full"></i>
+                            <i class="fa-brands fa-linkedin text-red-500"></i>
+                        </div>
+                   </div>
+                </div>
+                <!-- team member end -->
+            </div>
+        </section>
+        <!-- Meet with team end -->
 
 
 
