--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 clifford: '#da373d',
                 'fixed-star': '#FBC0A8',
                 'icon-bg': 'rgba(18, 18, 18, 0.10)',
+                'footer-bg': '#121212',
               }
             }
           }
@@ -81,7 +82,6 @@
             <div class="carousel w-full relative">
                 <!-- slide 1 -->
                 <div id="slide1" class="carousel-item relative w-full">
-
                   <img src="images/banner1.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide4" class="btn btn-circle  bg-black border-none text-white">❮</a> 
@@ -200,6 +200,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                      <hr class="text-gray-500 w-[244px] mx-auto">
                       <p class="text-base font-normal text-gray-500">Apples</p>
                       <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
                         <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
@@ -209,7 +210,7 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="#modal1" >Details</a></div>
+                       <div class="text-red-500 font-bold mt-4"><a href="#modal1" >Details</a></div>
                     </div>
                   </div>
                   <!-- Modal part start 1-->
@@ -220,7 +221,7 @@
                         <figure class="px-10 pt-10">
                           <img src="images/fruit6.png" alt="" class="rounded-xl" />
                         </figure>
-                        <div class="card-body items-center text-center">
+                        <div class="card-body items-center text-center space-y-4">
                           <h2 class="card-title font-bold text-2xl text-black">Apples</h2>
                           <p class="text-base font-normal text-gray-500">Professional employees are there for you to
                              pick the most <br>amazing and fresh fruits.</p>
@@ -249,6 +250,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                      <hr class="text-gray-500 w-[244px] mx-auto">
                       <p class="text-base font-normal text-gray-500">Orange</p>
                       <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
                         <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
@@ -258,7 +260,7 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="#modal2">Details</a></div>
+                       <div class="text-red-500 font-bold mt-4"><a href="#modal2">Details</a></div>
                     </div>
                   </div>
                   <!-- Modal part start 2-->
@@ -269,7 +271,7 @@
                         <figure class="px-10 pt-10">
                           <img src="images/fruit7.png" alt="" class="rounded-xl" />
                         </figure>
-                        <div class="card-body items-center text-center">
+                        <div class="card-body items-center text-center space-y-4">
                           <h2 class="card-title font-bold text-2xl text-black">Orange</h2>
                           <p class="text-base font-normal text-gray-500">Professional employees are there for you to
                              pick the most <br>amazing and fresh fruits.</p>
@@ -298,6 +300,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                      <hr class="text-gray-500 w-[244px] mx-auto">
                       <p class="text-base font-normal text-gray-500">Red Dragon</p>
                       <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
                         <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
@@ -307,7 +310,7 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="#modal3">Details</a></div>
+                       <div class="text-red-500 font-bold mt-4"><a href="#modal3">Details</a></div>
                     </div>
                   </div>
                   <!-- Modal part start 3-->
@@ -318,7 +321,7 @@
                         <figure class="px-10 pt-10">
                           <img src="images/fruit8.png" alt="" class="rounded-xl" />
                         </figure>
-                        <div class="card-body items-center text-center">
+                        <div class="card-body items-center text-center space-y-4">
                           <h2 class="card-title font-bold text-2xl text-black">Red Dragon</h2>
                           <p class="text-base font-normal text-gray-500">Professional employees are there for you to
                              pick the most <br>amazing and fresh fruits.</p>
@@ -347,6 +350,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                      <hr class="text-gray-500 w-[244px] mx-auto">
                       <p class="text-base font-normal text-gray-500">Banana</p>
                       <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
                         <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
@@ -356,7 +360,7 @@
                         <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                         <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                       </svg>
-                       <div class="text-red-500 font-bold"><a href="#modal4">Details</a></div>
+                       <div class="text-red-500 font-bold mt-4"><a href="#modal4">Details</a></div>
                     </div>
                   </div>
                     <!-- Modal part start 4-->
@@ -367,7 +371,7 @@
                             <figure class="px-10 pt-10">
                               <img src="images/fruit9.png" alt="" class="rounded-xl" />
                             </figure>
-                            <div class="card-body items-center text-center">
+                            <div class="card-body items-center text-center space-y-4">
                               <h2 class="card-title font-bold text-2xl text-black">Banana</h2>
                               <p class="text-base font-normal text-gray-500">Professional employees are there for you to
                                  pick the most <br>amazing and fresh fruits.</p>
@@ -399,7 +403,7 @@
         <!-- deal with day end -->
         <!-- Meet with team start -->
         <section class="my-24">
-        <div class=" bg-img bg-no-repeat h-[690px] rounded-md border-none relative">
+        <div class=" bg-img bg-no-repeat h-[690px] rounded-md border-none relative w-full">
             <div class="text-center pt-32 space-y-4">
                 <h1 class="text-5xl font-bold text-white">Meet the team section</h1>
                 <p class="text-white font-normal">Contrary to popular belief, is not simply random text.
@@ -518,7 +522,7 @@
             <div class="flex items-center space-x-4">
                 <div class="space-y-2 text-right">
                     <h4 class="text-lg font-bold text-black">Integrated Suppliers</h4>
-                    <hr class="text-gray-500 w-[100px] text-end">
+                    <hr class="text-gray-500 w-[100px] ml-auto">
                     <p class="text-base font-normal text-gray-500">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                 </div>
                 <div class="bg-icon-bg rounded-full p-1.5">
@@ -547,7 +551,7 @@
             <div class="flex items-center space-x-4">
                 <div class="space-y-2 text-right">
                     <h4 class="text-lg font-bold text-black">Sustainable Practice</h4>
-                    <hr class="text-gray-500 w-[100px] text-end">
+                    <hr class="text-gray-500 w-[100px] ml-auto">
                     <p class="text-base font-normal text-gray-500">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                 </div>
                 <div class="bg-icon-bg rounded-full p-1.5">
@@ -558,7 +562,7 @@
             <div class="flex items-center space-x-4">
                 <div class="space-y-2 text-right">
                     <h4 class="text-lg font-bold text-black">The Benefits Only</h4>
-                    <hr class="text-gray-500 w-[100px] text-end">
+                    <hr class="text-gray-500 w-[100px] ml-auto">
                     <p class="text-base font-normal text-gray-500">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                 </div>
                 <div class="bg-icon-bg rounded-full p-1.5">
@@ -566,10 +570,7 @@
                 </div>
             </div>
            </div>
-
-
           </div>
-
         </section>
 
         <!-- chose section end -->
@@ -578,8 +579,26 @@
 
     </main>
     <!-- footer start -->
-    <footer class="container mx-auto">
-
+    <footer class="container mx-auto bg-footer-bg h-[526px] pt-40 space-y-4">
+        <div class="flex justify-center items-center">
+            <img src="images/logo.png" alt=""><span class="lg:text-4xl ml-3 font-bold text-white">Fruit Burst</span>
+          </div>
+        <div class="flex justify-center items-center gap-16 mb-40 text-white font-bold pt-5">
+            <p>Home</p>
+            <p>About Us</p>
+            <p>Shop</p>
+            <p>All Fruits</p>
+            <p>Support</p>
+            <p>My Account</p>
+        </div>
+        <div class="flex justify-center items-center gap-12 pt-10">
+            <i class="fa-brands fa-facebook fa-2xl"></i>
+            <i class="fa-brands fa-square-twitter fa-2xl"></i>
+            <i class="fa-brands fa-youtube fa-2xl"></i>
+            <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
+            <i class="fa-brands fa-linkedin fa-2xl"></i>
+            <i class="fa-brands fa-apple fa-2xl"></i>
+        </div>
     </footer>
     <!-- footer end -->
 </body>
