--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           theme: {
             extend: {
                 backgroundImage: {
-                'img': "url('images/team.png')",
+                'img': "url('images/11.jpg')",
             },
               colors: {
                 clifford: '#da373d',
@@ -135,7 +135,7 @@
               </div>
                <!-- slider end-->
             <!-- fruit name part start -->
-            <div class="absolute -bottom-[200px] left-0 right-0 flex justify-between bg-white rounded-lg shadow-lg py-2 max-w-6xl mx-auto px-10">
+            <div class="absolute -bottom-[280px] left-0 right-0 flex justify-between bg-white rounded-lg shadow-lg py-2 max-w-6xl mx-auto px-10">
                 <p class="text-center"><img src="images/fruit1.png" alt=""><span>Blackberry</span></p>
                 <p class="text-center"><img src="images/fruit2.png" alt=""><span>Orange</span></p>
                 <p class="text-center"><img src="images/fruit3.png" alt=""><span>Mango</span></p>
@@ -403,7 +403,7 @@
         <!-- deal with day end -->
         <!-- Meet with team start -->
         <section class="my-24">
-        <div class=" bg-img bg-no-repeat h-[690px] rounded-md border-none relative w-full">
+        <div class=" bg-img bg-no-repeat h-[690px] rounded-md border-none relative">
             <div class="text-center pt-32 space-y-4">
                 <h1 class="text-5xl font-bold text-white">Meet the team section</h1>
                 <p class="text-white font-normal">Contrary to popular belief, is not simply random text.
@@ -462,8 +462,8 @@
                 </div>
                 <!-- team member end -->
             </div>
-            <div class="overlay absolute top-0 left-1/2 right-4 transform -translate-x-1/2 w-[1500px] h-full rounded-md bg-black opacity-30 hover:opacity-50 transition-opacity"></div>
-  <!-- ... (existing content) ... -->
+            <!-- <div class="overlay absolute top-0 left-1/2 right-4 transform -translate-x-1/2 w-[1500px] h-full rounded-md bg-black opacity-30 hover:opacity-50 transition-opacity"></div> -->
+
         </div>
         </section>
         <!-- Meet with team end -->
@@ -574,9 +574,6 @@
         </section>
 
         <!-- chose section end -->
-
-
-
     </main>
     <!-- footer start -->
     <footer class="container mx-auto bg-footer-bg h-[526px] pt-40 space-y-4">
@@ -592,7 +589,7 @@
             <p>My Account</p>
         </div>
         <div class="flex justify-center items-center gap-12 pt-10">
-            <i class="fa-brands fa-facebook fa-2xl"></i>
+            <i class="fa-brands fa-facebook fa-2x"></i>
             <i class="fa-brands fa-square-twitter fa-2xl"></i>
             <i class="fa-brands fa-youtube fa-2xl"></i>
             <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
